<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constraintLayout" android:background="@android:color/white">
    <EditText
            android:id="@+id/edit_text_name"
            android:textSize="20sp"
            android:hint="@string/Enter_Name"
            android:layout_width="223dp"
            android:layout_height="42dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:background="@drawable/rounded_edit_text"/>
    <Button
            android:text="@string/Search"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:id="@+id/search_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            android:background="@drawable/rounded_button" android:textColor="@android:color/white"
            android:layout_marginTop="28dp" app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.CardView
            android:layout_width="376dp"
            android:layout_height="420dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"

            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="5dp"
            android:id="@+id/cardView" app:layout_constraintHorizontal_bias="0.421" app:contentPadding="5dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/imageView3">
        <android.support.constraint.ConstraintLayout
                android:layout_width="351dp"
                android:layout_height="399dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:background="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
        >

            <ImageView
                    android:layout_width="235dp"
                    android:layout_height="199dp"
                    android:id="@+id/trending_user_image"
                    android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:srcCompat="@drawable/github" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="56dp" android:layout_marginRight="56dp"/>
            <TextView
                    android:layout_width="253dp"
                    android:layout_height="36dp"
                    android:id="@+id/trending_user_name" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginBottom="40dp"
                    app:layout_constraintBottom_toBottomOf="parent" tools:text="@string/User_Name"
                    app:fontFamily="@font/aguafina_script" app:layout_constraintStart_toStartOf="parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="18sp"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/popular_contributor"
                    android:layout_width="223dp"
                    android:layout_height="23dp"
                    android:id="@+id/textView3" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="112dp" android:layout_marginRight="112dp" android:textStyle="bold"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="42dp"
                    android:layout_height="26dp"
                    android:id="@+id/trending_user_position"
                    android:textSize="18sp" android:textColor="#E91E63" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/value"
                    tools:text="@string/value" android:textStyle="bold"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/trending_user_loader" android:layout_marginTop="160dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="140dp" android:layout_marginRight="140dp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
    <Button
            android:text="@string/refresh"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/refresh_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" android:background="@drawable/rounded_pink_button"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="112dp" app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="83dp"
            android:layout_height="59dp" app:srcCompat="@drawable/github"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="140dp"
            android:layout_marginStart="140dp" android:background="@android:color/white"
            android:layout_marginTop="104dp" app:layout_constraintTop_toTopOf="parent"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="43dp"
            android:layout_height="33dp"
            android:id="@+id/search_users_loader" android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="156dp"
            android:layout_marginStart="156dp"/>


</android.support.constraint.ConstraintLayout>